--- a/probabilidade.ipynb
+++ b/probabilidade.ipynb
@@ -2,49 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from typing import List, Union\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Combinatoria:\n",
     "    def __init__(self):\n",
     "        pass\n",
+    "\n",
+    "    def fatorial(self, n: int) -> int:\n",
+    "        \"\"\"Calcula o fatorial de um número de forma iterativa.\"\"\"\n",
+    "        resultado = 1\n",
+    "        for i in range(2, n + 1):\n",
+    "            resultado *= i\n",
+    "        return resultado\n",
+    "\n",
+    "    def permutacao(self, n: int, k: int) -> int:\n",
+    "        \"\"\"Calcula a permutação de n elementos tomados k a k.\"\"\"\n",
+    "        return self.fatorial(n) // self.fatorial(n - k)\n",
     "    \n",
-    "    def fatorial(self, n):\n",
-    "        if n == 0 or n == 1:\n",
-    "            return 1\n",
-    "        return n * self.fatorial(n-1)\n",
+    "    def combinacao(self, n: int, k: int) -> int:\n",
+    "        \"\"\"Calcula a combinação de n elementos tomados k a k.\"\"\"\n",
+    "        return self.fatorial(n) // (self.fatorial(k) * self.fatorial(n - k))\n",
     "    \n",
-    "    def permutacao(self, n, k):\n",
-    "        return self.fatorial(n) / self.fatorial(n - k)\n",
+    "    def arranjo(self, n: int, k: int) -> int:\n",
+    "        \"\"\"Calcula o arranjo de n elementos tomados k a k.\"\"\"\n",
+    "        return self.permutacao(n, k)\n",
     "    \n",
-    "    def combinacao(self, n, k):\n",
-    "        return self.fatorial(n) / (self.fatorial(k) * self.fatorial(n - k))\n",
-    "    \n",
-    "    def arranjo(self, n, k):\n",
-    "        return self.fatorial(n) / self.fatorial(n - k)\n",
-    "    \n",
-    "    def permutacao_com_repeticao(self, n, repeticoes):\n",
+    "    def permutacao_com_repeticao(self, n: int, repeticoes: List[int]) -> int:\n",
+    "        \"\"\"Calcula a permutação com repetição.\"\"\"\n",
     "        denominador = 1\n",
     "        for r in repeticoes:\n",
     "            denominador *= self.fatorial(r)\n",
-    "        return self.fatorial(n) / denominador"
+    "        return self.fatorial(n) // denominador"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,37 +60,44 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def prob_evento(self, n_eventos_favoraveis, n_total_eventos):\n",
+    "    def prob_evento(self, n_eventos_favoraveis: int, n_total_eventos: int) -> float:\n",
+    "        \"\"\"Calcula a probabilidade de um evento.\"\"\"\n",
     "        return n_eventos_favoraveis / n_total_eventos\n",
     "\n",
-    "    def prob_complementar(self, prob_evento):\n",
+    "    def prob_complementar(self, prob_evento: float) -> float:\n",
+    "        \"\"\"Calcula a probabilidade complementar.\"\"\"\n",
     "        return 1 - prob_evento\n",
     "\n",
-    "    def prob_condicional(self, prob_A, prob_B, prob_intersecao_AB):\n",
+    "    def prob_condicional(self, prob_A: float, prob_B: float, prob_intersecao_AB: float) -> float:\n",
+    "        \"\"\"Calcula a probabilidade condicional.\"\"\"\n",
     "        return prob_intersecao_AB / prob_B\n",
     "\n",
-    "    def prob_uniao(self, prob_A, prob_B, prob_intersecao_AB=None):\n",
+    "    def prob_uniao(self, prob_A: float, prob_B: float, prob_intersecao_AB: Union[float, None] = None) -> float:\n",
+    "        \"\"\"Calcula a probabilidade da união de dois eventos.\"\"\"\n",
     "        if prob_intersecao_AB is None:\n",
     "            return prob_A + prob_B\n",
     "        return prob_A + prob_B - prob_intersecao_AB\n",
     "    \n",
-    "    def prob_independente(self, prob_eventos):\n",
+    "    def prob_independente(self, prob_eventos: List[float]) -> float:\n",
+    "        \"\"\"Calcula a probabilidade de eventos independentes.\"\"\"\n",
     "        resultado = 1\n",
     "        for prob in prob_eventos:\n",
     "            resultado *= prob\n",
     "        return resultado\n",
     "    \n",
-    "    def prob_binomial(self, n, k, prob_sucesso):\n",
+    "    def prob_binomial(self, n: int, k: int, prob_sucesso: float) -> float:\n",
+    "        \"\"\"Calcula a probabilidade binomial.\"\"\"\n",
     "        combinatoria = Combinatoria().combinacao(n, k)\n",
     "        return combinatoria * (prob_sucesso ** k) * ((1 - prob_sucesso) ** (n - k))\n",
     "    \n",
-    "    def probabilidade_nao_equiprovavel(self, eventos_favoraveis, espaco_amostral):\n",
+    "    def probabilidade_nao_equiprovavel(self, eventos_favoraveis: List[float], espaco_amostral: List[float]) -> float:\n",
+    "        \"\"\"Calcula a probabilidade para eventos não equiprováveis.\"\"\"\n",
     "        return sum(eventos_favoraveis) / sum(espaco_amostral)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,20 +105,22 @@
     "    def __init__(self):\n",
     "        pass\n",
     "    \n",
-    "    def teorema_probabilidade_total(self, probs_eventos, probs_condicionais):\n",
+    "    def teorema_probabilidade_total(self, probs_eventos: List[float], probs_condicionais: List[float]) -> float:\n",
+    "        \"\"\"Calcula a probabilidade total usando o teorema da probabilidade total.\"\"\"\n",
     "        return sum([prob_evento * prob_condicional for prob_evento, prob_condicional in zip(probs_eventos, probs_condicionais)])\n",
     "    \n",
-    "    def teorema_bayes(self, prob_A_dado_B, prob_B, prob_A):\n",
+    "    def teorema_bayes(self, prob_A_dado_B: float, prob_B: float, prob_A: float) -> float:\n",
+    "        \"\"\"Calcula a probabilidade usando o teorema de Bayes.\"\"\"\n",
     "        return (prob_A_dado_B * prob_B) / prob_A\n",
     "    \n",
-    "    def teorema_bayes_expandido(self, probs_A, probs_B_dado_A, prob_B):\n",
-    "        probs_posteriori = [(probs_B_dado_A[i] * probs_A[i]) / prob_B for i in range(len(probs_A))]\n",
-    "        return probs_posteriori"
+    "    def teorema_bayes_expandido(self, probs_A: List[float], probs_B_dado_A: List[float], prob_B: float) -> List[float]:\n",
+    "        \"\"\"Calcula as probabilidades a posteriori usando o teorema de Bayes expandido.\"\"\"\n",
+    "        return [(probs_B_dado_A[i] * probs_A[i]) / prob_B for i in range(len(probs_A))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,20 +128,23 @@
     "    def __init__(self):\n",
     "        pass\n",
     "    \n",
-    "    def valor_esperado(self, valores, probabilidades):\n",
+    "    def valor_esperado(self, valores: List[float], probabilidades: List[float]) -> float:\n",
+    "        \"\"\"Calcula o valor esperado de uma variável aleatória.\"\"\"\n",
     "        return sum([valor * prob for valor, prob in zip(valores, probabilidades)])\n",
     "\n",
-    "    def variancia(self, valores, probabilidades):\n",
+    "    def variancia(self, valores: List[float], probabilidades: List[float]) -> float:\n",
+    "        \"\"\"Calcula a variância de uma variável aleatória.\"\"\"\n",
     "        valor_esperado_val = self.valor_esperado(valores, probabilidades)\n",
     "        return sum([((valor - valor_esperado_val) ** 2) * prob for valor, prob in zip(valores, probabilidades)])\n",
     "\n",
-    "    def desvio_padrao(self, valores, probabilidades):\n",
+    "    def desvio_padrao(self, valores: List[float], probabilidades: List[float]) -> float:\n",
+    "        \"\"\"Calcula o desvio padrão de uma variável aleatória.\"\"\"\n",
     "        return self.variancia(valores, probabilidades) ** 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,28 +152,33 @@
     "    def __init__(self):\n",
     "        pass\n",
     "    \n",
-    "    def distribuicao_uniforme_discreta(self, valores):\n",
+    "    def distribuicao_uniforme_discreta(self, valores: List[int]) -> List[float]:\n",
+    "        \"\"\"Calcula a distribuição uniforme discreta.\"\"\"\n",
     "        n = len(valores)\n",
     "        prob = 1 / n\n",
     "        return [prob for _ in valores]\n",
     "    \n",
-    "    def distribuicao_bernoulli(self, p):\n",
+    "    def distribuicao_bernoulli(self, p: float) -> List[float]:\n",
+    "        \"\"\"Calcula a distribuição de Bernoulli.\"\"\"\n",
     "        return [1 - p, p]\n",
     "    \n",
-    "    def distribuicao_binomial(self, n, p, k):\n",
+    "    def distribuicao_binomial(self, n: int, p: float, k: int) -> float:\n",
+    "        \"\"\"Calcula a distribuição binomial.\"\"\"\n",
     "        combinatoria = Combinatoria().combinacao(n, k)\n",
     "        return combinatoria * (p ** k) * ((1 - p) ** (n - k))\n",
     "    \n",
-    "    def distribuicao_poisson(self, lmbda, k):\n",
+    "    def distribuicao_poisson(self, lmbda: float, k: int) -> float:\n",
+    "        \"\"\"Calcula a distribuição de Poisson.\"\"\"\n",
     "        return (math.exp(-lmbda) * (lmbda ** k)) / math.factorial(k)\n",
     "    \n",
-    "    def distribuicao_normal(self, x, mu, sigma):\n",
+    "    def distribuicao_normal(self, x: float, mu: float, sigma: float) -> float:\n",
+    "        \"\"\"Calcula a distribuição normal.\"\"\"\n",
     "        return (1 / (sigma * math.sqrt(2 * math.pi))) * math.exp(-0.5 * ((x - mu) / sigma) ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +186,8 @@
     "    def __init__(self):\n",
     "        self.distribuicoes = Distribuicoes()\n",
     "\n",
-    "    def plot_distribuicao_binomial(self, n, p):\n",
+    "    def plot_distribuicao_binomial(self, n: int, p: float):\n",
+    "        \"\"\"Plota a distribuição binomial.\"\"\"\n",
     "        k_values = np.arange(0, n + 1)\n",
     "        prob_values = [self.distribuicoes.distribuicao_binomial(n, p, k) for k in k_values]\n",
     "\n",
@@ -171,7 +197,8 @@
     "        plt.ylabel('Probabilidade')\n",
     "        plt.show()\n",
     "\n",
-    "    def plot_distribuicao_normal(self, mu, sigma):\n",
+    "    def plot_distribuicao_normal(self, mu: float, sigma: float):\n",
+    "        \"\"\"Plota a distribuição normal.\"\"\"\n",
     "        x_values = np.linspace(mu - 4 * sigma, mu + 4 * sigma, 100)\n",
     "        y_values = [self.distribuicoes.distribuicao_normal(x, mu, sigma) for x in x_values]\n",
     "\n",
@@ -181,7 +208,8 @@
     "        plt.ylabel('Densidade de Probabilidade')\n",
     "        plt.show()\n",
     "\n",
-    "    def plot_distribuicao_uniforme_discreta(self, valores):\n",
+    "    def plot_distribuicao_uniforme_discreta(self, valores: List[int]):\n",
+    "        \"\"\"Plota a distribuição uniforme discreta.\"\"\"\n",
     "        prob_values = self.distribuicoes.distribuicao_uniforme_discreta(valores)\n",
     "\n",
     "        plt.bar(valores, prob_values, color='purple')\n",
@@ -190,7 +218,8 @@
     "        plt.ylabel('Probabilidade')\n",
     "        plt.show()\n",
     "\n",
-    "    def plot_distribuicao_bernoulli(self, p):\n",
+    "    def plot_distribuicao_bernoulli(self, p: float):\n",
+    "        \"\"\"Plota a distribuição de Bernoulli.\"\"\"\n",
     "        valores = [0, 1]\n",
     "        prob_values = self.distribuicoes.distribuicao_bernoulli(p)\n",
     "\n",
@@ -201,7 +230,8 @@
     "        plt.xticks(valores)\n",
     "        plt.show()\n",
     "\n",
-    "    def plot_distribuicao_poisson(self, lmbda, max_k):\n",
+    "    def plot_distribuicao_poisson(self, lmbda: float, max_k: int):\n",
+    "        \"\"\"Plota a distribuição de Poisson.\"\"\"\n",
     "        k_values = np.arange(0, max_k + 1)\n",
     "        prob_values = [self.distribuicoes.distribuicao_poisson(lmbda, k) for k in k_values]\n",
     "\n",
@@ -209,6 +239,96 @@
     "        plt.title(f'Distribuição de Poisson (λ={lmbda})')\n",
     "        plt.xlabel('k')\n",
     "        plt.ylabel('Probabilidade')\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EstatisticasDescritivas:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def media(self, dados: List[Union[int, float]]) -> float:\n",
+    "        \"\"\"Calcula a média dos dados.\"\"\"\n",
+    "        return sum(dados) / len(dados)\n",
+    "\n",
+    "    def mediana(self, dados: List[Union[int, float]]) -> float:\n",
+    "        \"\"\"Calcula a mediana dos dados.\"\"\"\n",
+    "        dados_ordenados = sorted(dados)\n",
+    "        n = len(dados_ordenados)\n",
+    "        meio = n // 2\n",
+    "        if n % 2 == 0:\n",
+    "            return (dados_ordenados[meio - 1] + dados_ordenados[meio]) / 2\n",
+    "        else:\n",
+    "            return dados_ordenados[meio]\n",
+    "\n",
+    "    def moda(self, dados: List[Union[int, float]]) -> List[Union[int, float]]:\n",
+    "        \"\"\"Calcula a moda dos dados.\"\"\"\n",
+    "        contador = Counter(dados)\n",
+    "        max_count = max(contador.values())\n",
+    "        modas = [k for k, v in contador.items() if v == max_count]\n",
+    "        return modas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GraficosEstatisticas:\n",
+    "    def __init__(self):\n",
+    "        self.estatisticas = EstatisticasDescritivas()\n",
+    "\n",
+    "    def plot_histograma_com_estatisticas(self, dados: List[Union[int, float]], bins: int = 10):\n",
+    "        \"\"\"Plota um histograma com as estatísticas descritivas (média, mediana, moda).\"\"\"\n",
+    "        media = self.estatisticas.media(dados)\n",
+    "        mediana = self.estatisticas.mediana(dados)\n",
+    "        modas = self.estatisticas.moda(dados)\n",
+    "\n",
+    "        plt.hist(dados, bins=bins, color='skyblue', edgecolor='black', alpha=0.7)\n",
+    "        plt.axvline(media, color='red', linestyle='dashed', linewidth=1.5, label=f'Média: {media:.2f}')\n",
+    "        plt.axvline(mediana, color='green', linestyle='dashed', linewidth=1.5, label=f'Mediana: {mediana:.2f}')\n",
+    "        for moda in modas:\n",
+    "            plt.axvline(moda, color='blue', linestyle='dashed', linewidth=1.5, label=f'Moda: {moda:.2f}')\n",
+    "        \n",
+    "        plt.title('Histograma com Média, Mediana e Moda')\n",
+    "        plt.xlabel('Valor')\n",
+    "        plt.ylabel('Frequência')\n",
+    "        plt.legend()\n",
+    "        plt.show()\n",
+    "\n",
+    "    def plot_boxplot(self, dados: List[Union[int, float]]):\n",
+    "        \"\"\"Plota um boxplot dos dados.\"\"\"\n",
+    "        plt.boxplot(dados, vert=False, patch_artist=True)\n",
+    "        plt.title('Boxplot dos Dados')\n",
+    "        plt.xlabel('Valor')\n",
+    "        plt.show()\n",
+    "\n",
+    "    def plot_distribuicao_com_estatisticas(self, dados: List[Union[int, float]], bins: int = 10):\n",
+    "        \"\"\"Plota a distribuição dos dados com indicações de média, mediana e moda.\"\"\"\n",
+    "        media = self.estatisticas.media(dados)\n",
+    "        mediana = self.estatisticas.mediana(dados)\n",
+    "        modas = self.estatisticas.moda(dados)\n",
+    "        \n",
+    "        x = np.linspace(min(dados), max(dados), 100)\n",
+    "        y = (1 / (np.std(dados) * np.sqrt(2 * np.pi))) * np.exp(-0.5 * ((x - np.mean(dados)) / np.std(dados)) ** 2)\n",
+    "        \n",
+    "        plt.plot(x, y, color='black', linestyle='dashed', label='Distribuição Normal')\n",
+    "        plt.hist(dados, bins=bins, density=True, color='skyblue', edgecolor='black', alpha=0.6)\n",
+    "        plt.axvline(media, color='red', linestyle='dashed', linewidth=1.5, label=f'Média: {media:.2f}')\n",
+    "        plt.axvline(mediana, color='green', linestyle='dashed', linewidth=1.5, label=f'Mediana: {mediana:.2f}')\n",
+    "        for moda in modas:\n",
+    "            plt.axvline(moda, color='blue', linestyle='dashed', linewidth=1.5, label=f'Moda: {moda:.2f}')\n",
+    "        \n",
+    "        plt.title('Distribuição dos Dados com Estatísticas Descritivas')\n",
+    "        plt.xlabel('Valor')\n",
+    "        plt.ylabel('Densidade de Probabilidade')\n",
+    "        plt.legend()\n",
     "        plt.show()"
    ]
   }
